????/??/?? Code Quality Improvements for MOSREF 
  - Fixed bug in lib/build when building cross-platform applications for win32
  - Added (preload module ..) function to core/import; informs the module
    loader that the specified module should be considered "loaded in the
    near future."
  - Added logic to lib/build to manage circular dependencies in standalone
    applications by emitting a preload after the core modules are loaded but 
    before the remainder.
  - Removed some superfluous debug spam.
  - Tagged WASPVM as 0.4.
  - Added Henry Spencer's regex for WIN32 platform, which is regex-poor.
  
2008/08/30 MOSREF Proxy Command and Fixes
  At this point, MOSREF is functional, but could use some improvements; this
  milestone is focussed on making MOSREF a production-worthy tool.
  
  - Verified operation of drone bridging.
  - Moved mosref/patch to lib/patch.
  - Removed debugging spam from lib/patch.
  - Modified MOSREF communications to operate in blocks of random sizes from 0 
    to 255 bytes, each block has a checksum, the overall message has a 
    checksum.  This reduces the potential for noise to tie up memory or hang 
    the node.  (It will still cause the connection to break, though.)
  - Renamed tcp-connect primitive to start-tcp-connect
  - Modified outbound tcp connections to yield 'connect after they first 
    connect.
  - Added tcp-connect function to core/io; emulates old synchronous 
    tcp-connect behavior.  (Eating the opening 'connect message.)
  - Restored tcp-forward.
  - Adulterated spawn in mosref to traceback and halt on an unhandled error in
    any spawned process.
  - Ensured that OS connections will only yield a 'close once; subsequent 
    waits on the connection result in an infinite wait.  (Which corresponds
    with other inputs.)
  - Restored the MOSREF "proxy" command.

2006/08/16 Port MOSREF 2.0b4 into WaspVM.
  Found the final source tree for MOSREF, porting it into the current
  work on MOSREF..
  